CRUD sin delete

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,8 +1,9 @@
-<ul>
+<ul class="list-unstyled">
     <li>
-        <a routerLink="/series">Series</a>
+        <button routerLink="/series" class="btn btn-success">Series</button>
     </li>
+    <br>
     <li>
-        <a routerLink="/peliculas">Peliculas</a>
+        <button routerLink="/peliculas" class="btn btn-success">Peliculas</button>
     </li>
 </ul>
