--- a/src/app/peliculas/form-pelicula/form-pelicula.component.html
+++ b/src/app/peliculas/form-pelicula/form-pelicula.component.html
@@ -61,6 +61,14 @@
     Guardar
   </button>
 
+  <button
+  class="btn btn-warning"
+    (click)="borrar()"
+    [disabled]="!formPelicula.valid"
+  >
+    Borrar
+  </button>
+
   <button class="btn btn-danger m-2" (click)="cancel()">Volver</button>
 
 </form>
